--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tamagotchi Star ✨</title>
+  <title>Tamagotchi Echomori Style 🎸</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
@@ -12,8 +12,8 @@
 <body>
   <header class="site-header">
     <div class="brand">
-      <span class="logo" aria-hidden="true">⭐</span>
-      <span class="title">Tamagotchi Star</span>
+      <span class="logo" aria-hidden="true">🎸</span>
+      <span class="title">Tamagotchi Echomori Style</span>
     </div>
     <nav class="tabs" aria-label="Navigation principale">
       <button class="tab active" data-target="home">Accueil</button>
@@ -26,8 +26,8 @@
   <main>
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
-      <h1>Bienvenue ✨</h1>
-      <p>Surprise ! Voici <strong>Tamagotchi Star</strong> — un compagnon virtuel prêt à illuminer tes journées.</p>
+      <h1>GOUGOUGAGA</h1>
+      <p>YIYIYIYIYIYIII ! Voici <strong>Tamagotchi Echomori Style </strong> — LE tamagotchi que tout le monde s'arrache (diponible en 1 seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
         <figcaption>Ton étoile, toujours avec toi ⭐</figcaption>
@@ -76,7 +76,7 @@
   </main>
 
   <footer class="site-footer">
-    <small>© Tamagotchi Echomori Style · Fait avec ❤️</small>
+    <small>© Tamagotchi Echomori Style</small>
   </footer>
 
   <script src="script.js"></script>
