Update footer copyright text for uniqueness

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   </main>
 
   <footer class="site-footer">
-    <small>© Tamagotchi Echomori Style</small>
+    <small>© Tamagotchi Echomori Style. Edition unique et limitée </small>
   </footer>
 
   <script src="script.js"></script>
