--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="brand">
       <span class="logo" aria-hidden="true">🎸</span>
-      <span class="title">Tamagotchi Echomori Style</span>
+      <span class="title">Tamagotchi Echomori Style 🎸</span>
     </div>
     <nav class="tabs" aria-label="Navigation principale">
       <button class="tab active" data-target="home">Accueil</button>
@@ -26,8 +26,8 @@
   <main>
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
-      <h1>GOUGOUGAGA</h1>
-      <p>YIYIYIYIYIYIII ! Voici <strong>Tamagotchi Echomori Style </strong> — LE tamagotchi que tout le monde s'arrache (diponible en 1 seul exemplaire !).</p>
+      <h1> 🧌🦶 GOUGOUGAGA 🦶🧌</h1>
+      <p> YIYIYIYIYIYIII ! Voici <strong> ton nouveau tamagotchi édition : Echomori Style </strong> — LE tamagotchi que tout le monde s'arrache (diponible en 1 seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
         <figcaption>Ton étoile, toujours avec toi ⭐</figcaption>
