Update figcaption text in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p> YIYIYIYIYIYIII ! Voici <strong> ton nouveau tamagotchi édition : Echomori Style </strong> — LE tamagotchi que tout le monde s'arrache (diponible en 1 seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
-        <figcaption>Ton étoile, toujours avec toi ⭐</figcaption>
+        <figcaption>Ton groupe de ROCKSTARS à portée de main</figcaption>
       </figure>
       <div class="cta-row">
         <a href="#how" class="btn primary" data-target="how">Comment ça marche</a>
