--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
   <header class="site-header">
     <div class="brand">
       <span class="logo" aria-hidden="true">🎸</span>
-      <span class="title">Tamagotchi Echomori Style 🎸</span>
+      <span class="title">Tamagotchi Echomori Style </span>
     </div>
     <nav class="tabs" aria-label="Navigation principale">
       <button class="tab active" data-target="home">Accueil</button>
       <button class="tab" data-target="how">Comment ça marche</button>
-      <button class="tab" data-target="bonus">Bonus</button>
       <button class="tab" data-target="contact">Contact</button>
     </nav>
   </header>
@@ -34,7 +33,7 @@
       </figure>
       <div class="cta-row">
         <a href="#how" class="btn primary" data-target="how">Comment ça marche</a>
-        <a href="#contact" class="btn" data-target="contact">Me laisser un message 💌</a>
+        <a href="#contact" class="btn" data-target="contact">Une réclamation ? c'est ici</a>
       </div>
     </section>
 
@@ -42,34 +41,22 @@
     <section id="how" class="panel" tabindex="0">
       <h2>Comment ça marche</h2>
       <ol class="steps">
-        <li>Appuie sur <strong>Start</strong> pour réveiller l’étoile.</li>
+        <li>Appuie sur <strong> les boutons droite et gauche pendant 5 secondes pour allumer/éteindre le tamagotchi </strong>.</li>
         <li>Nourris-la, amuse-la, et veille à ce qu’elle se repose.</li>
-        <li>Plus tu t’en occupes, plus elle brille ✨.</li>
+        <li>Plus tu t’en occupes, plus ELLE DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
       </ol>
       <div class="tips">
-        <p><strong>Astuce :</strong> Reviens chaque jour pour voir son humeur !</p>
+        <p><strong>Astuce :</strong> Reviens chaque jour pour voir son humeur ! SINON IL MEURT ☠️ </p>
       </div>
     </section>
 
-    <!-- Bonus -->
-    <section id="bonus" class="panel" tabindex="0">
-      <h2>Bonus</h2>
-      <ul class="downloads">
-        <li>
-          <a class="btn" href="assets/downloads/guide.pdf" download>Télécharger le guide (PDF)</a>
-        </li>
-        <li>
-          <a class="btn" href="assets/images/cover.png" download>Fond d’écran ⭐</a>
-        </li>
-      </ul>
-    </section>
 
     <!-- Contact -->
     <section id="contact" class="panel" tabindex="0">
       <h2>Contact</h2>
-      <p>Tu peux me répondre ici :</p>
+      <p> Une réclamation ? c'est ici :</p>
       <div class="cta-row">
-        <a class="btn primary" href="mailto:ton.email@example.com">M’envoyer un email</a>
+        <a class="btn primary" href="mailto:etournoux@hotmail.fr">M’envoyer un email</a>
         <a class="btn" href="#home" data-target="home">Revenir à l’accueil</a>
       </div>
     </section>
