Update text and emojis in index.html

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <main>
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
-      <h1> 🧌🦶 GOUGOUGAGA 🦶🧌</h1>
-      <p> YIYIYIYIYIYIII ! Voici <strong> ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style </strong> — LE tamagotchi que tout le monde s'arrache (diponible en 1 seul exemplaire !).</p>
+      <h1> 🐟 GOUGOUGAGA 🐟 </h1>
+      <p> YIYIYIYIYIYIII ! Voici <strong> ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (diponible en 1 seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
         <figcaption>Ton groupe de ROCKSTARS à portée de main</figcaption>
@@ -63,7 +63,7 @@
   </main>
 
   <footer class="site-footer">
-    <small>© Tamagotchi Echomori Style. Edition unique et limitée </small>
+    <small>© Tamagotchi Echomori Style 🐟. Edition unique et limitée </small>
   </footer>
 
   <script src="script.js"></script>
