Fix HTML formatting and update text in index.html

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <section id="how" class="panel" tabindex="0">
       <h2>Comment ça marche</h2>
       <ol class="steps">
-        <li>Appuie sur <strong> les boutons droite et gauche  <strong> pendant 5 secondes <strong> pour allumer/éteindre le tamagotchi </strong>.</li>
-        <li>Fais le grandir, monte ton groupe et SLAY GIRLLLL 💅.</li>
+        <li>Appuie sur <strong> les boutons droite et gauche  <strong> pendant 5 secondes <strong> pour allumer/éteindre le tamagotchi.</li>
+        <li>Fais le grandir, monte ton groupe et <strong> SLAY GIRLLLL <strong> 💅.</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
       </ol>
       <div class="tips">
@@ -54,7 +54,7 @@
     <!-- Contact -->
     <section id="contact" class="panel" tabindex="0">
       <h2>Contact</h2>
-      <p> Une réclamation ? c'est ici :</p>
+      <p> Tu n'es pas satisfaite de ton produit ? Réclamation juste ici :</p>
       <div class="cta-row">
         <a class="btn primary" href="mailto:etournoux@hotmail.fr">M’envoyer un email</a>
         <a class="btn" href="#home" data-target="home">Revenir à l’accueil</a>
