--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
       <h1> 🐟 GOUGOUGAGA 🐟 </h1>
-      <p> YIYIYIYIYIYIII ! Voici <strong> ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (diponible en 1 seul exemplaire !).</p>
+      <p> YIYIYIYIYIYIII ! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (diponible en un seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
         <figcaption>Ton groupe de ROCKSTARS à portée de main</figcaption>
@@ -41,12 +41,11 @@
     <section id="how" class="panel" tabindex="0">
       <h2>Comment ça marche</h2>
       <ol class="steps">
-        <li>Appuie sur <strong> les boutons droite et gauche  <strong> pendant 5 secondes <strong> pour allumer/éteindre le tamagotchi.</li>
+        <li>Appuie sur les boutons droite et gauche simultanément <strong> pendant 5 secondes <strong> pour allumer/éteindre le tamagotchi.</li>
         <li>Fais le grandir, monte ton groupe et <strong> SLAY GIRLLLL <strong> 💅.</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
-      </ol>
       <div class="tips">
-        <p><strong>Astuce :</strong> Prends en soin, SINON IL MEURT ☠️ </p>
+        <p><strong>Astuce :</strong> Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️ </p>
       </div>
     </section>
 
