--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
-      <h1> 🐟 GOUGOUGAGA 🐟 </h1>
+      <h1> 最もユニークなたまごっち </h1>
       <p> YIYIYIYIYIYIII ! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (diponible en un seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
@@ -41,8 +41,8 @@
     <section id="how" class="panel" tabindex="0">
       <h2>Comment ça marche</h2>
       <ol class="steps">
-        <li>Appuie sur les boutons droite et gauche simultanément <strong> pendant 5 secondes <strong> pour allumer/éteindre le tamagotchi.</li>
-        <li>Fais le grandir, monte ton groupe et <strong> SLAY GIRLLLL <strong> 💅.</li>
+        <li>Appuie sur les boutons droite et gauche simultanément <strong> pendant 5 secondes </strong> pour allumer/éteindre le tamagotchi.</li>
+        <li>Fais le grandir, monte ton groupe et <strong> SLAY GIRLLLL </strong> 💅.</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
       <div class="tips">
         <p><strong>Astuce :</strong> Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️ </p>
