--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <section id="how" class="panel" tabindex="0">
       <h2>Comment ça marche</h2>
       <ol class="steps">
-        <li>Appuie sur les boutons droite et gauche simultanément <strong> pendant 5 secondes </strong> pour allumer/éteindre le tamagotchi.</li>
-        <li>Fais le grandir, monte ton groupe et <strong> SLAY GIRLLLL </strong> 💅.</li>
-        <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
+        <li>Appuie sur les boutons de droite et de gauche simultanément <strong> pendant 5 secondes </strong> pour allumer/éteindre le tamagotchi.</li>
+        <li>Fais-le grandir, monte ton groupe et <strong> SLAY GIRLLLL </strong> 💅 !</li>
+        <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.<li>
       <div class="tips">
         <p><strong>Astuce :</strong> Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️ </p>
       </div>
