--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     <!-- Contact -->
     <section id="contact" class="panel" tabindex="0">
       <h2>Contact</h2>
-      <p> Tu n'es pas satisfaite de ton produit ? Réclamation juste ici :</p>
+      <p> Tu n'es pas satisfaite de ton produit ? Dépose une réclamation ici :</p>
+      <img src="assets/images/chat_triste.png" alt="Fond étoilé avec une étoile dorée au centre" />
       <div class="cta-row">
         <a class="btn primary" href="mailto:etournoux@hotmail.fr">M’envoyer un email</a>
         <a class="btn" href="#home" data-target="home">Revenir à l’accueil</a>
