--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
       <h1> 最もユニークなたまごっち </h1>
-      <p> YIYIYIYIYIYIII ! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (diponible en un seul exemplaire !).</p>
+      <p> YIYIYIYIYIYIII🔥! Voici ton nouveau tamagotchi dans une édition super limitée : <strong> Echomori Style 🐟 </strong> — LE tamagotchi que tout le monde s'arrache (diponible en un seul exemplaire !).</p>
       <figure class="hero">
         <img src="assets/images/cover.png" alt="Fond étoilé avec une étoile dorée au centre" />
         <figcaption>Ton groupe de ROCKSTARS à portée de main</figcaption>
@@ -56,7 +56,7 @@
       <p> Tu n'es pas satisfaite de ton produit ? Dépose une réclamation ici :</p>
       <img src="assets/images/chat_triste.png" alt="Fond étoilé avec une étoile dorée au centre" />
       <div class="cta-row">
-        <a class="btn primary" href="mailto:etournoux@hotmail.fr">M’envoyer un email</a>
+        <a class="btn primary" href="mailto:etournoux@hotmail.fr">C'EST PAS SYMPA</a>
         <a class="btn" href="#home" data-target="home">Revenir à l’accueil</a>
       </div>
     </section>
