--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.<li>
       <div class="tips">
         <p><strong>Astuce :</strong> Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️ </p>
+      <div class="lore">
         <p> Ce tamagotchi n’apparaît qu’une fois par génération.</p>
-        <p> Tu as été choisi(e). Bonne chance. 🐟✨</p>
+        <p>Tu as été choisi(e). Bonne chance. 🐟✨</p>
       </div>
     </section>
 
