--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
       <ol class="steps">
         <li>Appuie sur les boutons de droite et de gauche simultanément <strong> pendant 5 secondes </strong> pour allumer/éteindre le tamagotchi.</li>
         <li>Fais-le grandir, monte ton groupe et <strong> SLAY GIRLLLL </strong> 💅 !</li>
-        <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.<li>
-      <div class="tips">
-        <p><strong>Astuce :</strong> Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️ </p>
+        <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
+        <li>Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️ <li>
       <div class="lore">
-        <p> Ce tamagotchi n’apparaît qu’une fois par génération.</p>
-        <p>Tu as été choisi(e). Bonne chance. 🐟✨</p>
+        <p><strong> Ce tamagotchi n’apparaît qu’une fois par génération.</p>
+        <p>Tu as été choisi(e). Bonne chance. 🐟✨</p></strong> 
       </div>
     </section>
 
