--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li>Appuie sur les boutons de droite et de gauche simultanément <strong> pendant 5 secondes </strong> pour allumer/éteindre le tamagotchi.</li>
         <li>Fais-le grandir, monte ton groupe et <strong> SLAY GIRLLLL </strong> 💅 !</li>
         <li>Plus tu t’en occupes, plus IL DEVIENT UNE ROCKSTAR D'EXCEPTION 🔥.</li>
-        <li>Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️ <li>
+        <li>Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️. </p>
       <div class="lore">
         <p><strong> Ce tamagotchi n’apparaît qu’une fois par génération.</p>
         <p>Tu as été choisi(e). Bonne chance. 🐟✨</p></strong> 
