--- a/index.html
+++ b/index.html
@@ -49,10 +49,15 @@
   </ol>
 
   <div class="lore">
-    <p class="hidden-lore">Ce tamagotchi n’apparaît qu’une fois par génération.</p>
-    <p>Tu as été choisi(e). Bonne chance. 🐟✨</p>
+    <p class="hidden-lore" style="opacity: 0.3; font-style: italic;">
+      Ce tamagotchi n’apparaît qu’une fois par génération.
+    </p>
+    <p style="opacity: 0.3; font-style: italic;">
+      Tu as été choisi(e). Bonne chance. 🐟✨
+    </p>
   </div>
 </section>
+
 
 
     <!-- Contact -->
