--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <li>Prends en soin (faim, hygiène, sommeil), SINON IL MEURT ☠️.</li>
   </ol>
 
-  <div class="lore">
-    <p class="hidden-lore" style="opacity: 0.3; font-style: italic;">
+   <div class="lore" style="text-align: center;">
+    <p class="hidden-lore" style="opacity: 0.4; font-style: italic;">
       Ce tamagotchi n’apparaît qu’une fois par génération.
     </p>
     <p style="opacity: 0.3; font-style: italic;">
