Correct gender agreement in message text

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       Ce tamagotchi n’apparaît qu’une fois par génération.
     </p>
     <p style="opacity: 0.35; font-style: italic;">
-      Tu as été choisi(e). Bonne chance. 🐟✨
+      Tu as été choisie. Bonne chance. 🐟✨
     </p>
   </div>
 </section>
