--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section id="contact" class="panel" tabindex="0">
       <h2>Contact</h2>
       <p> Tu n'es pas satisfaite de ton produit ? Dépose une réclamation ici :</p>
-      <img src="assets/images/chat_triste.png" alt="Fond étoilé avec une étoile dorée au centre" />
+      <img src="assets/images/chat_triste.jpg" alt="Fond étoilé avec une étoile dorée au centre" />
       <div class="cta-row">
         <a class="btn primary" href="mailto:etournoux@hotmail.fr">C'EST PAS SYMPA</a>
         <a class="btn" href="#home" data-target="home">Revenir à l’accueil</a>
