Refine contact section and style image
Updated contact section text and added styling to image.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
     <!-- Contact -->
     <section id="contact" class="panel" tabindex="0">
       <h2>Contact</h2>
-      <p> Tu n'es pas satisfaite de ton produit ? Dépose une réclamation ici :</p>
-      <img src="assets/images/chat_triste.jpg" alt="Fond étoilé avec une étoile dorée au centre" />
+      <p>Tu n'es pas satisfaite de ton produit ? Dépose une réclamation ici :</p>
+      <img src="assets/images/chat_triste.jpg" 
+           alt="Fond étoilé avec une étoile dorée au centre" 
+           style="width: 300px; height: auto; display: block; margin: 0 auto;" />
       <div class="cta-row">
         <a class="btn primary" href="mailto:etournoux@hotmail.fr">C'EST PAS SYMPA</a>
         <a class="btn" href="#home" data-target="home">Revenir à l’accueil</a>
