--- a/index.html
+++ b/index.html
@@ -59,14 +59,13 @@
 </section>
 
 
-
     <!-- Contact -->
     <section id="contact" class="panel" tabindex="0">
       <h2>Contact</h2>
       <p>Tu n'es pas satisfaite de ton produit ? Dépose une réclamation ici :</p>
       <img src="assets/images/chat_triste.jpg" 
-           alt="Fond étoilé avec une étoile dorée au centre" 
-           style="width: 300px; height: auto; display: block; margin: 0 auto;" />
+           alt="Chat triste" 
+           style="width: 300px; height: auto; display: block; margin: 0 auto; border-radius: 15px; border: 2px solid #ccc;" />
       <div class="cta-row">
         <a class="btn primary" href="mailto:etournoux@hotmail.fr">C'EST PAS SYMPA</a>
         <a class="btn" href="#home" data-target="home">Revenir à l’accueil</a>
