--- a/index.html
+++ b/index.html
@@ -58,14 +58,20 @@
   </div>
 </section>
 
-
     <!-- Contact -->
     <section id="contact" class="panel" tabindex="0">
       <h2>Contact</h2>
       <p>Tu n'es pas satisfaite de ton produit ? Dépose une réclamation ici :</p>
       <img src="assets/images/chat_triste.jpg" 
            alt="Chat triste" 
-           style="width: 300px; height: auto; display: block; margin: 0 auto; border-radius: 15px; border: 2px solid #ccc;" />
+           style="
+             width: 300px; 
+             height: auto; 
+             display: block; 
+             margin: 0 auto 20px auto; /* espace sous l'image */
+             border-radius: 15px; 
+             border: 2px solid #ccc;
+           " />
       <div class="cta-row">
         <a class="btn primary" href="mailto:etournoux@hotmail.fr">C'EST PAS SYMPA</a>
         <a class="btn" href="#home" data-target="home">Revenir à l’accueil</a>
