Update 'Comment ça marche' to include a question mark

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <nav class="tabs" aria-label="Navigation principale">
       <button class="tab active" data-target="home">Accueil</button>
-      <button class="tab" data-target="how">Comment ça marche</button>
+      <button class="tab" data-target="how">Comment ça marche ?</button>
       <button class="tab" data-target="contact">Contact</button>
     </nav>
   </header>
@@ -32,14 +32,14 @@
         <figcaption>Ton groupe de ROCKSTARS à portée de main</figcaption>
       </figure>
       <div class="cta-row">
-        <a href="#how" class="btn primary" data-target="how">Comment ça marche</a>
+        <a href="#how" class="btn primary" data-target="how">Comment ça marche ?</a>
         <a href="#contact" class="btn" data-target="contact">Une réclamation ? c'est ici</a>
       </div>
     </section>
 
 <!-- Comment ça marche -->
 <section id="how" class="panel" tabindex="0">
-  <h2>Comment ça marche</h2>
+  <h2>Comment ça marche ?</h2>
 
   <ol class="steps">
     <li>Appuie sur les boutons de droite et de gauche simultanément <strong>pendant 5 secondes</strong> pour allumer/éteindre le tamagotchi.</li>
