--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="brand">
       <span class="logo" aria-hidden="true">🎸</span>
-      <span class="title">Tamagotchi Echomori Style </span>
+      <span class="title">タマゴッチ エコモリスタイル </span>
     </div>
     <nav class="tabs" aria-label="Navigation principale">
       <button class="tab active" data-target="home">Accueil</button>
