--- a/index.html
+++ b/index.html
@@ -1,108 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tamagotchi Echomori Style 🎸</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <style>
-    /* Reset simple */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-
-    /* Header */
-    .site-header {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 15px 20px;
-      background-color: #fff;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .logo {
-      font-size: 2rem;
-    }
-
-    .title {
-      font-size: 1.5rem;
-      font-weight: 500;
-      white-space: nowrap; /* empêche le titre de se casser verticalement */
-    }
-
-    /* Navigation */
-    .tabs {
-      display: flex;
-      flex-wrap: wrap; /* permet aux boutons de passer à la ligne si nécessaire */
-      justify-content: center;
-      gap: 10px;
-      margin-top: 15px;
-    }
-
-    .tab {
-      padding: 10px 20px;
-      font-size: 1rem;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      background-color: #eee;
-      white-space: nowrap; /* empêche le texte de se casser verticalement */
-      transition: background-color 0.3s;
-    }
-
-    .tab:hover,
-    .tab.active {
-      background-color: #ddd;
-    }
-
-    /* Responsive pour petits écrans */
-    @media (max-width: 480px) {
-      .tabs {
-        flex-direction: column; /* empile les boutons */
-        align-items: stretch;
-      }
-
-      .tab {
-        width: 100%; /* chaque bouton prend toute la largeur */
-        text-align: center;
-      }
-
-      .title {
-        font-size: 1.2rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <header class="site-header">
-    <div class="brand">
-      <span class="logo" aria-hidden="true">🎸</span>
-      <span class="title">タマゴッチ エコモリスタイル</span>
-    </div>
-    <nav class="tabs" aria-label="Navigation principale">
-      <button class="tab active" data-target="home">Accueil</button>
-      <button class="tab" data-target="how">Comment ça marche ?</button>
-      <button class="tab" data-target="contact">Contact</button>
-    </nav>
-  </header>
-
+<!DOCTYPE html> <html lang="fr"> <head> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <title>Tamagotchi Echomori Style 🎸</title> <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet"> <link rel="stylesheet" href="style.css" /> </head> <body> <header class="site-header"> <div class="brand"> <span class="logo" aria-hidden="true">🎸</span> <span class="title">タマゴッチ エコモリスタイル </span> </div> <nav class="tabs" aria-label="Navigation principale"> <button class="tab active" data-target="home">Accueil</button> <button class="tab" data-target="how">Comment ça marche ?</button> <button class="tab" data-target="contact">Contact</button> </nav> </header>
   <main>
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
