--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
-<!DOCTYPE html> 
-<html lang="fr"> 
-<head> 
-  <meta charset="UTF-8" /> 
-  <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-  <title>Tamagotchi Echomori Style 🎸</title> 
 
-  <link rel="preconnect" href="https://fonts.googleapis.com"> 
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="style.css" /> 
-</head> 
-<body> 
-  <header class="site-header"> 
-    <div class="brand"> 
-      <span class="logo" aria-hidden="true">🎸</span> 
-      <span class="title">タマゴッチ エコモリスタイル</span> 
-    </div> 
-    <nav class="tabs" aria-label="Navigation principale"> 
-      <button class="tab active" data-target="home">Accueil</button> 
-      <button class="tab" data-target="how">Comment ça marche ?</button> 
-      <button class="tab" data-target="contact">Contact</button> 
-    </nav> 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tamagotchi Echomori Style 🎸</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
+  <!-- Votre feuille de style -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="brand">
+      <span class="logo" aria-hidden="true">🎸</span>
+      <span class="title">タマゴッチ エコモリスタイル</span>
+    </div>
+
+    <!-- Boutons sous le titre -->
+    <nav class="tabs" aria-label="Navigation principale">
+      <button class="tab active" data-target="home">Accueil</button>
+      <button class="tab" data-target="how">Comment ça marche ?</button>
+      <button class="tab" data-target="contact">Contact</button>
+    </nav>
+  </header>
   <main>
 
 
