Fix comments and update stylesheet link version
Updated Google Fonts comment and added versioning to stylesheet link.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Tamagotchi Echomori Style 🎸</title>
 
-  <!-- Google Fonts -->
+  <!-- Google Fonts (balises <link> correctes) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
   <!-- Votre feuille de style -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
   <header class="site-header">
@@ -20,17 +20,15 @@
       <span class="logo" aria-hidden="true">🎸</span>
       <span class="title">タマゴッチ エコモリスタイル</span>
     </div>
+
     <nav class="tabs" aria-label="Navigation principale">
       <button class="tab active" data-target="home">Accueil</button>
       <button class="tab" data-target="how">Comment ça marche ?</button>
       <button class="tab" data-target="contact">Contact</button>
     </nav>
   </header>
-
   <main>
-
-
-
+    
     <!-- Accueil -->
     <section id="home" class="panel visible" tabindex="0">
       <h1> 最もユニークなたまごっち </h1>
