Revise footer content with line break
Updated footer to include line break and improve formatting.

--- a/index.html
+++ b/index.html
@@ -85,9 +85,13 @@
     </section>
   </main>
 
-  <footer class="site-footer">
-    <small>© Tamagotchi Echomori Style 🐟. Edition unique et limitée </small>
-  </footer>
+<footer class="site-footer">
+  <small>
+    © Tamagotchi Echomori Style 🐟.<br>
+    Edition unique et limitée
+  </small>
+</footer>
+
 
   <script src="script.js"></script>
 </body>
