--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
   </main>
 
 <footer class="site-footer">
-  <small>
-    © Tamagotchi Echomori Style 🐟.<br>
-    Edition unique et limitée
-  </small>
+  <small>© Tamagotchi Echomori Style 🐟.</small>
+  <small class="edition">Edition unique et limitée</small>
 </footer>
+
 
 
   <script src="script.js"></script>
