--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   <script>
     (function () {
       const IMG_PATH = 'assets/images';  // 📂 change si besoin (ex: 'assets/cards')
-      const IMG_EXT  = 'png';            // 🖼️ change si besoin (png/jpg/webp)
+      const IMG_EXT  = 'jpg';            // 🖼️ change si besoin (png/jpg/webp)
 
       const panel      = document.getElementById('minigame');
       const grid       = panel?.querySelector('.game-grid');
