--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section id="minigame" class="panel" tabindex="0" aria-labelledby="minigame-title">
       <h2 id="minigame-title">Mini‑jeu : Trouve la carte qui brille</h2>
       <p style="color: var(--muted); margin-top: -0.5rem;">
-        Clique sur une des trois cartes. Si tu trouves la shiny, elle brille ✨ !
+        Clique sur une des trois cartes. Tu gagnes seulement si tu as celle qui brille !
       </p>
 
       <!-- Grille de cartes -->
