--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section id="minigame" class="panel" tabindex="0" aria-labelledby="minigame-title">
       <h2 id="minigame-title">Mini‑jeu : Trouve la carte qui brille</h2>
       <p style="color: var(--muted); margin-top: -0.5rem;">
-        Clique sur une des trois cartes. Tu gagnes seulement si tu as celle qui brille !
+        Clique sur une des trois cartes. Si tu trouves la shiny, elle brille ✨ !
       </p>
 
       <!-- Grille de cartes -->
@@ -258,7 +258,7 @@
   <script>
     (function () {
       const IMG_PATH = 'assets/images';  // 📂 change si besoin (ex: 'assets/cards')
-      const IMG_EXT  = 'jpg';            // 🖼️ change si besoin (png/jpg/webp)
+      const IMG_EXT  = 'png';            // 🖼️ change si besoin (png/jpg/webp)
 
       const panel      = document.getElementById('minigame');
       const grid       = panel?.querySelector('.game-grid');
